data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_894.wast
;; 5. **Loop with Function Call and Stack Unwinding**:    - Description: Design a loop where function calls within the loop manipulate the operand stack, and ensure stack unwinding occurs correctly when `br` or `br_if` instructions are used.    - Constraint: Check if the operand stack is correctly unwound and reinitialized, affecting subsequent calls.    - Relation: Improper stack unwinding can lead to invalid states for function calls and returns.

(assert_invalid
  (module
    (func $loop_with_func_call_and_stack_unwinding
      (loop (param i32) (result i32)
        (call $some_function) 
        (br 0)
      )
    )
    (func $some_function (result i32)
      i32.const 42
    )
  )
  "type mismatch"
)